Fixed scrollbar

--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -28,6 +28,25 @@ a,
 button {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
 
+body::-webkit-scrollbar-thumb {
+  background-color: yellow;
+  box-shadow: inset 0px 0px 7px grey;
+  border-radius: 6px; }
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #89ff01;
+  box-shadow: inset 0px 0px 7px black; }
+
+body::-webkit-scrollbar-thumb:hover,
+body::-webkit-scrollbar-thumb {
+  transition: all ease-in 0.2s; }
+
+body::-webkit-scrollbar-track {
+  background-color: #692f84; }
+
+body::-webkit-scrollbar {
+  width: 16px; }
+
 h1,
 h2,
 h3,
